# horasis

./: CMakeLists.txt  MIDI_LED_Implementation_Plan.md  README.md  config.h  layout.cpp  layout.h  leds.cpp  leds.h  main.cpp  midi.cpp  midi.h  ws2812.pio
pico-sdk/: Makefile  cmake_install.cmake
pico-sdk/docs/: Makefile  cmake_install.cmake
pico-sdk/src/: Makefile  cmake_install.cmake
pico-sdk/src/common/boot_picobin_headers/: Makefile  cmake_install.cmake
pico-sdk/src/common/boot_picoboot_headers/: Makefile  cmake_install.cmake
pico-sdk/src/common/boot_uf2_headers/: Makefile  cmake_install.cmake
pico-sdk/src/common/hardware_claim/: Makefile  cmake_install.cmake
pico-sdk/src/common/pico_base_headers/: Makefile  cmake_install.cmake
pico-sdk/src/common/pico_binary_info/: Makefile  cmake_install.cmake
pico-sdk/src/common/pico_bit_ops_headers/: Makefile  cmake_install.cmake
pico-sdk/src/common/pico_divider_headers/: Makefile  cmake_install.cmake
pico-sdk/src/common/pico_stdlib_headers/: Makefile  cmake_install.cmake
pico-sdk/src/common/pico_sync/: Makefile  cmake_install.cmake
pico-sdk/src/common/pico_time/: Makefile  cmake_install.cmake
pico-sdk/src/common/pico_usb_reset_interface_headers/: Makefile  cmake_install.cmake
pico-sdk/src/common/pico_util/: Makefile  cmake_install.cmake
pico-sdk/src/rp2040/boot_stage2/: Makefile  cmake_install.cmake
pico-sdk/src/rp2040/hardware_regs/: Makefile  cmake_install.cmake
pico-sdk/src/rp2040/hardware_structs/: Makefile  cmake_install.cmake
pico-sdk/tools/: Makefile  cmake_install.cmake
(+154 files in other folders)
